[SweetDeal] refactor: 불필요한 메서드 삭제 및 DTO record로 변경에 따른 메서드 호출 수정